--- a/css/global.css
+++ b/css/global.css
@@ -3,10 +3,21 @@
 */
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
+
+
 #searcher :focus{
     box-shadow: none !important;
     border-color: transparent !important;
     -webkit-box-shadow: none !important;
+}
+
+body::-webkit-scrollbar{
+    width: 10px;
+}
+
+body::-webkit-scrollbar-thumb{
+    background-color: #ff4848;
+    border-radius: 5px;
 }
 
 body {
