--- a/Home/home.css
+++ b/Home/home.css
@@ -8,8 +8,8 @@
 }
 
 #t1:hover{
-    background-color: white;
-    //border: 1px solid #ff4848;
+    background-color: #ffe9e9;
+    border: 1px solid #ff4848;
     cursor: pointer;
   
 }
@@ -18,6 +18,7 @@
 }
 #t1:hover div p{
     color: #ff4848 !important;
+    font-weight: 600;
 }
 
 .league{
